# os81

./: Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
src/: ap_init.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pio.rs  serial.rs
src/acpi/: hpet.rs  madt.rs  mod.rs  rsdp.rs  rxsdt.rs
src/asm/x86_64/: trampoline.asm
src/device/: ioapic.rs  local_apic.rs  mod.rs  pic.rs
