[package]
name = "os81"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "boot",
]

[dependencies]
bootloader = "0.10"
x86_64 = "0.14.7"
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }
volatile = "0.2.6"
pic8259 = "0.10.1"
linked_list_allocator = "0.9.0"
x86 = "0.51"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.3"
rustc-cfg = "0.3.0"

[features]
default = ["acpi"]
acpi = []

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000" # Must match PHYS_OFFSET in lib.rs